fix: added horizontal scrolling to tablet / mobile view related articles (#320)

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -91,6 +91,11 @@
 .wrapper {
   display: flex;
   flex: 0 0 auto;
+  aspect-ratio: 1.7;
+}
+
+.wideWrapper {
+  aspect-ratio: unset;
   height: 170px;
 
   @include media('>phoneLandscape', '<=desktop') {
