--- a/src/pages/account-sharing/account-sharing.module.scss
+++ b/src/pages/account-sharing/account-sharing.module.scss
@@ -1,4 +1,8 @@
 .relatedArticles {
   padding-top: rem(30px);
   padding-bottom: rem(75px);
+
+  @include media('<=phoneLandscape') {
+    padding: rem(100px) 0 rem(65px) rem(20px);
+  }
 }
