--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -137,3 +137,9 @@ img {
   width: 100%;
   height: auto;
 }
+
+// In Safari and iOS the img element is placed above the wrapper hiding the curved borders
+.gatsby-image-wrapper {
+  position: relative;
+  z-index: 0;
+}
